--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.8.6",
+    "babel-preset-next": "^1.4.0",
     "next": "^12.3.1",
+    "next-redux-wrapper": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "redux-saga": "^1.2.1",
     "sass": "^1.55.0"
   }
 }
